# modul.os

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
.github/ISSUE_TEMPLATE/: fast_feature_development.md
backend/: .env.template  database.py  dockerfile  main.py  pyproject.toml  routes.py
backend/alembic/: env.py
backend/db/: db_setup.py
backend/models/: database.py  group.py  meeting.py  schedule.py  user.py
backend/routes/: __init__.py  hello.py  users.py
backend/schemas/: __init__.py  user.py
backend/tests/: conftest.py
backend/tests/endpoints/: test_hello.py
backend/tests/models/: test_user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Landing.jsx
